ELLE-350 | fix "text too long" warning placement in word analyser

--- a/ui/src/elle/tools/wordanalyser/styles/WordAnalyser.css
+++ b/ui/src/elle/tools/wordanalyser/styles/WordAnalyser.css
@@ -37,14 +37,6 @@
   max-width: 80%;
 }
 
-.text-too-long-infobox {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .filter-class {
   width: 330px;
 }
